{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 279,
  "lineage": "6bcd73a1-679f-e7c9-3b64-e68d466cb34f",
  "resources": [
    {
      "module": "module.IGW_module[\"igw01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:internet-gateway/igw-0508eac288bd32f7d",
            "id": "igw-0508eac288bd32f7d",
            "owner_id": "185439933271",
            "tags": {
              "Name": "ACME-IGW"
            },
            "tags_all": {
              "Name": "ACME-IGW"
            },
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "dependencies": [
            "module.aws_vpc_module.aws_vpc.acme_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet_module[\"private_us_east_1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:subnet/subnet-01303d1e0d9699576",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01303d1e0d9699576",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185439933271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_us_east_1a"
            },
            "tags_all": {
              "Name": "private_us_east_1a"
            },
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "dependencies": [
            "module.aws_vpc_module.aws_vpc.acme_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet_module[\"private_us_east_1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:subnet/subnet-0782a10526aebb1cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0782a10526aebb1cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185439933271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_us_east_1b"
            },
            "tags_all": {
              "Name": "private_us_east_1b"
            },
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "dependencies": [
            "module.aws_vpc_module.aws_vpc.acme_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet_module[\"public_us_east_1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:subnet/subnet-058fbe90f8c0776b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058fbe90f8c0776b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185439933271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_us_east_1a"
            },
            "tags_all": {
              "Name": "public_us_east_1a"
            },
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "dependencies": [
            "module.aws_vpc_module.aws_vpc.acme_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet_module[\"public_us_east_1b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:subnet/subnet-01d75141741d83d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d75141741d83d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "185439933271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_us_east_1b"
            },
            "tags_all": {
              "Name": "public_us_east_1b"
            },
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "dependencies": [
            "module.aws_vpc_module.aws_vpc.acme_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc_module[\"vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "acme_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:vpc/vpc-01394aa08238d281d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05dadac2f2e051d8b",
            "default_route_table_id": "rtb-094dce6cf169ebbbb",
            "default_security_group_id": "sg-0175d1c7c1d2eb07f",
            "dhcp_options_id": "dopt-08c8ad08e86cbad56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01394aa08238d281d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094dce6cf169ebbbb",
            "owner_id": "185439933271",
            "tags": {
              "Name": "ACME-vpc"
            },
            "tags_all": {
              "Name": "ACME-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06522a3ed5e88c06c",
            "domain": "vpc",
            "id": "eipalloc-06522a3ed5e88c06c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-86-198.compute-1.amazonaws.com",
            "public_ip": "34.206.86.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP01"
            },
            "tags_all": {
              "Name": "elasticIP01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a20da94d2b5b1af",
            "domain": "vpc",
            "id": "eipalloc-08a20da94d2b5b1af",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-204-250-174.compute-1.amazonaws.com",
            "public_ip": "54.204.250.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP02"
            },
            "tags_all": {
              "Name": "elasticIP02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway_module[\"natgw01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06522a3ed5e88c06c",
            "association_id": "eipassoc-0a21bbcaee903da74",
            "connectivity_type": "public",
            "id": "nat-032d81cf2725fb9b0",
            "network_interface_id": "eni-01cb62fc082fd95d7",
            "private_ip": "10.0.22.118",
            "public_ip": "34.206.86.198",
            "subnet_id": "subnet-058fbe90f8c0776b5",
            "tags": {
              "Name": "natgw01"
            },
            "tags_all": {
              "Name": "natgw01"
            }
          },
          "dependencies": [
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway_module[\"natgw02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a20da94d2b5b1af",
            "association_id": "eipassoc-063f3b7c20ff42faa",
            "connectivity_type": "public",
            "id": "nat-076a811523db30760",
            "network_interface_id": "eni-0aff49ee595977b50",
            "private_ip": "10.0.96.19",
            "public_ip": "54.204.250.174",
            "subnet_id": "subnet-01d75141741d83d94",
            "tags": {
              "Name": "natgw02"
            },
            "tags_all": {
              "Name": "natgw02"
            }
          },
          "dependencies": [
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_assoc_module[\"private_rtb_assoc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089b25d50fbd70799",
            "route_table_id": "rtb-0280fffdd37b08fb9",
            "subnet_id": "subnet-01303d1e0d9699576"
          },
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw",
            "module.rtb_module.aws_route_table.rtb"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_assoc_module[\"private_rtb_assoc02\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0550a6fd876f1c319",
            "route_table_id": "rtb-0bfd3d63df14ae57d",
            "subnet_id": "subnet-0782a10526aebb1cf"
          },
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw",
            "module.rtb_module.aws_route_table.rtb"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_assoc_module[\"public_rtb_assoc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c78ceba9c9424e09",
            "route_table_id": "rtb-0405c76cefb028cec",
            "subnet_id": "subnet-058fbe90f8c0776b5"
          },
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw",
            "module.rtb_module.aws_route_table.rtb"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_assoc_module[\"public_rtb_assoc02\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000c7e179945c7e31",
            "route_table_id": "rtb-0405c76cefb028cec",
            "subnet_id": "subnet-01d75141741d83d94"
          },
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw",
            "module.rtb_module.aws_route_table.rtb"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_module[\"privatertb01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:route-table/rtb-0280fffdd37b08fb9",
            "id": "rtb-0280fffdd37b08fb9",
            "owner_id": "185439933271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-032d81cf2725fb9b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb1"
            },
            "tags_all": {
              "Name": "private-rtb1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_module[\"privatertb02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:route-table/rtb-0bfd3d63df14ae57d",
            "id": "rtb-0bfd3d63df14ae57d",
            "owner_id": "185439933271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-076a811523db30760",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtb2"
            },
            "tags_all": {
              "Name": "private-rtb2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw"
          ]
        }
      ]
    },
    {
      "module": "module.rtb_module[\"publicrtb01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:185439933271:route-table/rtb-0405c76cefb028cec",
            "id": "rtb-0405c76cefb028cec",
            "owner_id": "185439933271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0508eac288bd32f7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb1"
            },
            "tags_all": {
              "Name": "public-rtb1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01394aa08238d281d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.IGW_module.aws_internet_gateway.igw",
            "module.aws_subnet_module.aws_subnet.acme_subnet",
            "module.aws_vpc_module.aws_vpc.acme_vpc",
            "module.eip_module.aws_eip.natgw_eip",
            "module.nat_gateway_module.aws_nat_gateway.ngw"
          ]
        }
      ]
    }
  ]
}